sort.baseball.SelectBaseball.scala.error
Erreur de compilation :
SelectBaseball:6: error: '(' expected but identifier found.
    if getCouleurJoueur(index2pos(a)(0),index2pos(a)(0)) == couleur {
       ^SelectBaseball:12: error: illegal start of simple expression
  }
  ^SelectBaseball:26: error: '(' expected but identifier found.
  if memeCouleurSous(a,getCouleurIndice(a)) { //Je le conscidère alors comme le deuxième de ça base
     ^SelectBaseball:43: error: '=' expected but '(' found.
def index2pos(index:Int):Array[Int](2) = {
                                   ^SelectBaseball:49: error: illegal start of simple expression
def pos2index(pos:Array[Int](2)):Int = {
^SelectBaseball:49: error: ')' expected but '(' found.
def pos2index(pos:Array[Int](2)):Int = {
                            ^SelectBaseball:49: error: '=' expected but ')' found.
def pos2index(pos:Array[Int](2)):Int = {
                               ^SelectBaseball:181: error: illegal start of simple expression
}
^